# Fast_API

./: Dockerfile  docker-compose.yml  pyproject.toml
