[tool.poetry]
name = "03-project"
version = "0.1.0"
description = ""
authors = ["cs0209012 <luvinstart@gmail.com>"]
readme = "README.md"
packages = [{include = "03"}]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.9"
psycopg2-binary = "^2.9.6"
pytest = "^7.3.0"
alembic = "^1.10.3"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
